# ai-council

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: chat.py  council.py  events.py  export.py  persona.py  provider.py  session.py
backend/app/providers/: base.py  factory.py  mock_provider.py  openai_provider.py
backend/app/services/: chat_orchestrator.py  council_orchestrator.py  event_bus.py  export_service.py  persona_registry.py  session_store.py  transcript_store.py
backend/tests/: conftest.py  test_chat.py  test_council_orchestrator.py  test_events.py  test_exports.py  test_health.py  test_openai_integration.py  test_personas.py  test_providers.py  test_sessions.py
docs/: architecture.md  demo.md  disclaimer.md  github-release-notes.md  local-install.md  release-checklist.md  sample-scenarios.md  security-and-privacy.md  troubleshooting.md  v0.1.0-scope.md
docs/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md
docs/validation/: v0.1.0-validation.md  v0.1.2-validation.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css
