[project]
name = "ai-council-backend"
version = "0.1.2"
description = "Local-first FastAPI backend for AI Council."
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.116.0",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: tests that call external services and are skipped unless explicitly enabled",
]
